nixidy/generated/prod/forgejo/Deployment-forgejo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    version: 14.0.3
  name: forgejo
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: forgejo
      app.kubernetes.io/name: forgejo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config: f853633ae32c25534dfd7a898990db1505f2ab25ef7fe91a4277a3eef2086003
        checksum/oauth_0: 7a912e68e8215cb9d976f78b1ec246c48c1120feb72084d9073beac564396921
      labels:
        app: forgejo
        app.kubernetes.io/instance: forgejo
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: forgejo
        version: 14.0.3
    spec:
      containers:
        - env:
            - name: SSH_LISTEN_PORT
              value: "2222"
            - name: SSH_PORT
              value: "22"
            - name: GITEA_APP_INI
              value: /data/gitea/conf/app.ini
            - name: GITEA_CUSTOM
              value: /data/gitea
            - name: GITEA_WORK_DIR
              value: /data
            - name: GITEA_TEMP
              value: /tmp/gitea
            - name: TMPDIR
              value: /tmp/gitea
            - name: HOME
              value: /data/gitea/git
          image: code.forgejo.org/forgejo/forgejo:14.0.3-rootless@sha256:3bde16a366e57f37c09599b77ceb83ed05b1934f8224072f8140bc66cf243608
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          name: forgejo
          ports:
            - containerPort: 2222
              name: ssh
            - containerPort: 3000
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /tmp
              name: temp
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      volumes:
        - name: init
          secret:
            defaultMode: 110
            secretName: forgejo-init
        - name: config
          secret:
            defaultMode: 110
            secretName: forgejo
        - name: inline-config-sources
          secret:
            secretName: forgejo-inline-config
        - name: additional-config-sources-0
          secret:
            secretName: forgejo-db-config
        - emptyDir: {}
          name: temp
        - name: data
          persistentVolumeClaim:
            claimName: gitea-shared-storage
