nixidy/generated/prod/forgejo/Pod-forgejo-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    version: 14.0.3
  name: forgejo-test-connection
  namespace: development
spec:
  containers:
    - args:
        - forgejo-http:3000
      command:
        - wget
      image: busybox:latest
      name: wget
  restartPolicy: Never
