nixidy/generated/prod/forgejo/Service-forgejo-http.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    version: 14.0.3
  name: forgejo-http
  namespace: development
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  type: ClusterIP
