nixidy/generated/prod/forgejo/HTTPRoute-forgejo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: development
spec:
  hostnames:
    - git.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
